--- a/src/styles/todos.module.scss
+++ b/src/styles/todos.module.scss
@@ -81,6 +81,15 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    min-width: 940px;
+
+
+    .emptyMessage {
+      width: 100%;
+      color: $silver-black;
+      text-align: center;
+      padding: 30px 0 108px;
+    }
 
 
     >li {
@@ -145,19 +154,19 @@
 @media(max-width:960px) {
 
   /* TodoList */
-  .todoListWrapper {
-    .h2 {
-      &::before {
-        display: none;
-      }
+  // .todoListWrapper {
+  //   .h2 {
+  //     &::before {
+  //       display: none;
+  //     }
 
-      &::after {
-        display: none;
-      }
-    }
+  //     &::after {
+  //       display: none;
+  //     }
+  //   }
 
-    .todoList {
-      justify-content: center;
-    }
-  }
+  //   .todoList {
+  //     justify-content: center;
+  //   }
+  // }
 }
